# omen

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  meson.build  meson.options
.github/workflows/: build-linux.yml  build-windows.yml  build.yml
common/: CMakeLists.txt  meson.build
common/include/omen/: hash.h  hash.hpp
common/src/: hash.cpp
engine/: CMakeLists.txt  meson.build
engine/include/omen/: application.h  application.hpp  settings.h  settings.hpp
engine/src/: application.cpp  application.h  main.cpp  settings.cpp  settings.h
launcher/: CMakeLists.txt  meson.build
launcher/src/: main.cpp
src/: Application.cpp  Application.h  ComponentLocator.h  LoggingApi.cpp  LoggingApi.h  application.cpp  main.cpp  settings.cpp  settings.h
test/: CMakeLists.txt  meson.build
test/src/: hash.cpp  settings.cpp
